en/tutorials/1.2/modes.md
---
layout: default
title: Using Modes 
i18n: en
---

# Using Modes

Mu is a modal editor.

All this means is that Mu behaves differently depending on the currently
selected mode. Modes make it easy to customise the way Mu behaves while also
simplifying Mu: rather than trying to provide every possible feature all at
once, modes organise related features and capabilities together.

As you need to use different sorts of features, change modes by simply clicking
on the "Modes" button (shown below) found as the top left button in Mu.

Simple!

<div class="row">
  <img src="/img/en/tutorials/mode_button.png" alt="The Mode button" class="img-responsive center-block img-rounded movie"/>
  <br/>
</div>

Once clicked a menu, like the one shown below, allows you to select the mode
you wish to use. Just double-click on the required mode, or highlight the mode
and click OK. If you want to back out, click cancel.

<div class="row">
  <img src="/img/en/tutorials/mode_selector1-1.png" alt="The Mode selector" class="img-responsive center-block img-rounded"/>
  <br/>
</div>

## Available Modes

<div class="row">
    <div class="col-md-1">
      <img src="/img/en/tutorials/microbit_logo.png" alt="Microbit Logo" class="img-responsive center-block img-rounded"/>
    </div>
    <div class="col-md-11">
    <p><strong><a href="microbit">BBC micro:bit</a></strong></p>
    <p>The <a href="http://microbit.org/">BBC micro:bit</a> is a small
    computing device for young coders that is capable of running MicroPython.
    Mu was originally created as volunteer led effort as part of the Python
    Software Foundation's contribution to the project.</p>
    <p>The micro:bit mode understands how to interact with and connect to
    a micro:bit.</p>
    </div>
</div>
<div class="row">
    <div class="col-md-1">
      <img src="/img/en/tutorials/circuitpython.png" alt="CircuitPython Logo" class="img-responsive center-block img-rounded"/>
    </div>
    <div class="col-md-11">
    <p><strong><a href="circuitpython">CircuitPython</a></strong></p>
    <p><a href="https://adafruit.com/">Adafruit</a> make extraordinarily
    awesome boards for embedded development. Many of these boards run
    Adafruit's own flavour of <a href="http://micropython.org/">MicroPython</a>
    called <a href="https://www.adafruit.com/circuitpython">CircuitPython</a>.</p>
    <p>The CircuitPython mode understands how to interact with and connect to
    Adafruit's boards.</p>
    </div>
</div>
<div class="row">
    <div class="col-md-1">
      <img src="/img/en/tutorials/esp.png" alt="ESP Mode Logo" class="img-responsive center-block img-rounded"/>
    </div>
    <div class="col-md-11">
    <p><strong><a href="esp">MicroPython on ESP boards</a></strong></p>
    <p>ESP8266 and ESP32 boards are small, cheap and connect to the Internet. 
    Both run <a href="https://micropython.org/">MicroPython</a> and work 
    well with Mu.</p>
    </div>
</div>
<div class="row">
    <div class="col-md-1">
      <img src="/img/en/tutorials/pygamezero_logo.png" alt="PyGameZero Logo" class="img-responsive center-block img-rounded"/>
    </div>
    <div class="col-md-11">
    <p><strong><a href="pgzero">PyGame Zero</a></strong></p>
    <p>The <a href="https://pygame-zero.readthedocs.io/en/stable/">PyGame Zero</a>
    project makes it very easy to write graphical games using Python.</p>
    <p>The PyGame Zero mode understands how to play such games and where to
    store game assets like images, sounds and music used in such games.</p>
    </div>
</div>
<div class="row">
    <div class="col-md-1">
      <img src="/img/en/tutorials/python_logo.png" alt="Python Logo" class="img-responsive center-block img-rounded"/>
    </div>
    <div class="col-md-11">
    <p><strong><a href="python">Python 3</a></strong></p>
    <p><a href="http://python.org/">Python</a> is one of the world's most
    popular professional programming
    languages. You use applications written in Python every day! Python is also
    very easy to learn for beginner programmers.</p>
    <p>The Python 3 mode provides the tools you need to get started, including
    a simple to use visual debugger that helps you watch your code is doing
    as it is running.</p>
    </div>
</div>
